TWC3167-6107,TWC3167-6093 : Word wrap fix for manage - deals tab & contract backdate reason popup fix (#2171)

--- a/Intel.MyDeals/Client/src/app/contract/allDeals/allDeals.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/allDeals/allDeals.component.css
@@ -421,3 +421,6 @@ kendo-tabstrip.diff-all-deals {
     padding:0px !important;
     left:-5px !important
 }
+#allDeals .vert-center.ng-binding.wordWrapTransform {
+    transform: translateY(0%) !important;
+}
